# AgentComaparison

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  agent_engine  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml  evaluation.yml
AgentEngine/: .env.example  PRD.md  README.md  TODO.md  cloudbuild.yaml  pyproject.toml
AgentEngine/.github/workflows/: deploy-production.yml  deploy-staging.yml  evaluation.yml
AgentEngine/docker/: Dockerfile  docker-compose.yml
AgentEngine/docs/: DEPLOYMENT.md  OPERATIONS.md  SECURITY.md  TRAINING.md
AgentEngine/infra/vpc-sc/: perimeter.yaml
AgentEngine/monitoring/: dashboard.yaml
AgentEngine/scripts/: deploy.py  deploy_with_session.py  minimal_deploy.py  standalone_agent.py  test_agent_memory.py  test_agent_with_session.py  test_sessions_api.py  test_vertex_rest_api.py
AgentEngine/scripts/infra/: setup_alerts.py  setup_iam.py
AgentEngine/scripts/version/: register.py
AgentEngine/src/agent_engine/: __init__.py  agent.py  config.py
AgentEngine/src/agent_engine/core/: __init__.py  base_agent.py  message_builder.py  pydantic_agent.py  result_processor.py
AgentEngine/src/agent_engine/evaluation/: framework.py  test_cases.py
AgentEngine/src/agent_engine/memory/: __init__.py  manager.py  models.py
AgentEngine/src/agent_engine/memory/backends/: in_memory.py  vertex_ai.py
AgentEngine/src/agent_engine/sessions/: __init__.py  manager.py  models.py
AgentEngine/src/agent_engine/sessions/backends/: __init__.py  base.py  vertex_ai.py
AgentEngine/src/agent_engine/tools/: __init__.py  datetime_tool.py  memory_tools.py
AgentEngine/src/agent_engine/version/: registry.py  rollback.py
AgentEngine/tests/: conftest.py  test_agent.py  test_core.py  test_integration.py  test_memory.py  test_sessions.py  test_version_registry.py
AgentEngine/tests/evaluation/: test_evaluation_framework.py  test_performance.py
agent_engine/: __init__.py  agent.py  config.py  constants.py  envs.py  requirements.txt  setup.py
agent_engine/core/: message_builder.py  pydantic_agent.py  result_processor.py
agent_engine/evaluation/: __init__.py  metrics.py
agent_engine/memory/backends/: base.py
agent_engine/observability/: decorators.py  tracing.py
agent_engine/sessions/: __init__.py
agent_engine/sessions/backends/: vertex_ai.py
agent_engine/version/: models.py
config/: production.env.example  staging.env  staging.env.example
docs/: API_REFERENCE.md  RETROSPECTIVE.md  RUNBOOK.md
infra/iam/: bindings.yaml  service-accounts.yaml
monitoring/: alerts.yaml  dashboard.yaml
scripts/: chat_with_agent.py  deploy.py  deploy_source.py  deploy_with_session.py  minimal_deploy.py  standalone_agent.py  test_agent_memory.py  test_agent_with_session.py  test_local_session_memory.py  test_sessions_api.py  test_vertex_backend.py  test_vertex_rest_api.py
scripts/ci/: run_quality_checks.py  verify_deployment.py
scripts/evaluation/: performance_test.py  run_evaluation.py  run_genai_evaluation.py  run_genai_evaluation_v2.py
scripts/infra/: setup_alerts.py  setup_vpc_sc.py  setup_workload_identity.sh
scripts/version/: promote.py  register.py  rollback.py
src/: __init__.py
src/agent_engine/: agent.py  config.py  exceptions.py
src/agent_engine/core/: base_agent.py  wrapper.py
src/agent_engine/evaluation/: framework.py  metrics.py  reporter.py  test_cases.py
src/agent_engine/memory/: manager.py  retriever.py
src/agent_engine/memory/backends/: __init__.py  in_memory.py  vertex_ai.py
src/agent_engine/observability/: __init__.py  decorators.py  logging.py  metrics.py  tracing.py
src/agent_engine/sessions/: manager.py
src/agent_engine/sessions/backends/: in_memory.py
src/agent_engine/tools/: calculator.py  memory_tools.py  search.py
src/agent_engine/version/: __init__.py  models.py  registry.py
tests/: __init__.py  conftest.py  test_agent.py  test_core.py  test_observability.py  test_rollback.py  test_tools.py
tests/evaluation/: test_evaluation_framework.py  test_performance.py
tests/evaluation/golden/: qa_pairs.json
versions/: registry.yaml
workflows/: ci.yml
